--- a/client/style/index.css
+++ b/client/style/index.css
@@ -2,12 +2,14 @@
     box-sizing: border-box;
     text-decoration: none;
     border: none;
+    margin: 0;
+    padding: 0;
 }
 
 body {
     max-width: 1024px;
     margin: 0 auto;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .flex {
